update-manager (1:0.91.5) intrepid; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - support "old-releases.ubuntu.com" as a valid mirror and
      auto transition from that to the regular archive 
      (LP: #235527)
  * UpdateManager/ChangelogViewer.py:
    - support "exo-open" (xfce) too (LP: #240473)

 --

update-manager (1:0.91.4) intrepid; urgency=low

  * update-manager:
    - string fixes (LP: #230865)
  * UpdateManager/UpdateManager.py:
    - support selecting/dselecting entire update 
      categories by double clicking on the list header

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 16 Jun 2008 12:22:35 +0200

update-manager (1:0.91.3) intrepid; urgency=low

  * DistUpgrade/mirrors.cfg:
    - remove ftp.caliu.info (LP: #231966)
  * UpdateManager/UpdateManager.py, data/update-manager.schemas.in:
    - provide a gconf key /apps/update-manager/autoclose_install_window
      to make it possible to prevent automatic closing of the installation
      window (LP: #183209)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 03 Jun 2008 12:25:11 +0200

update-manager (1:0.91.2) intrepid; urgency=low

  [ Brian Murray ]
  * String fix for "a unresolvable problem" (LP: #196269)
  * String fix for "A upgrade to" (LP: #196229)
  * String fix for "is in a inconsistent state" (LP: #197015)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 30 May 2008 17:19:29 +0200

update-manager (1:0.91.1) intrepid; urgency=low

  * debian/control:
    - add missing python-vte dependency to update-manager-hildon

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 30 May 2008 11:47:18 +0200

update-manager (1:0.91) intrepid; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - fix bug in withNetwork value propergation (LP: #227197)
  * DistUpgrade/DistUpgradeController.py:
    - fix bug with sources.list rewriting when mixed
      deb http://unknown-miror\ndeb-src http://known-mirror 
      entries are used (#221730)
  * UpdateManager/Common/utils.py: