@@ -4,6 +4,8 @@ update-manager (1:0.91.5) intrepid; urgency=low
     - support "old-releases.ubuntu.com" as a valid mirror and
       auto transition from that to the regular archive 
       (LP: #235527)
+    - add extra paraonoia when adding a missing admin group
+      (thanks to LaMont Jones)
   * UpdateManager/ChangelogViewer.py:
     - support "exo-open" (xfce) too (LP: #240473)
 
